# cadical

./: configure  makefile.in  meson.build
.github/workflows/: build.yml
src/: analyze.cpp  arena.cpp  arena.hpp  assume.cpp  averages.cpp  averages.hpp  backtrack.cpp  backward.cpp  bins.cpp  bins.hpp  block.cpp  block.hpp  cadical.cpp  cadical.hpp  ccadical.cpp  ccadical.h  checker.cpp  checker.hpp  clause.cpp  clause.hpp  collect.cpp  compact.cpp  condition.cpp  config.cpp  config.hpp  constrain.cpp  contract.cpp  contract.hpp  cover.cpp  cover.hpp  decide.cpp  decompose.cpp  deduplicate.cpp  elim.cpp  elim.hpp  ema.cpp  ema.hpp  extend.cpp  external.cpp  external.hpp  (+84 more)
